--- a/first.ipynb
+++ b/first.ipynb
@@ -28,6 +28,8 @@
     "response = requests.get('https://keras.io/getting_started/')\n",
     "print(response.status_code)  # Status code (e.g., 200 for success)\n",
     "print(response.headers.get('Content-Type'))"
+    "print(response.headers.get('Content-Type'))"
+   
    ]
   },
   {
@@ -60,3 +62,4 @@
  "nbformat": 4,
  "nbformat_minor": 2
 }
+
